// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Form.ButtonRow | aligns left 1`] = `
<div
  style={
    Object {
      "padding": "24px",
      "width": "50%",
    }
  }
>
  <div
    style={
      Object {
        "border": "1px solid blue",
      }
    }
  >
    <div
      data-css-63oe3q=""
    >
      <div
        data-css-4l6uky=""
      >
        <div
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          form stuff
        </div>
      </div>
      <div
        data-css-4l6uky=""
      >
        <div
          data-css-1cqgl9p=""
        >
          <div
            data-css-7d5932=""
          >
            <button
              data-css-a3dmt8=""
              disabled={false}
              style={Object {}}
            >
              <span
                data-css-15b13by=""
              >
                Save
              </span>
            </button>
          </div>
          <div
            data-css-7d5932=""
          >
            <button
              data-css-bu16i2=""
              disabled={false}
              style={Object {}}
            >
              <span
                data-css-15b13by=""
              >
                Cancel
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Form.ButtonRow | aligns right 1`] = `
<div
  style={
    Object {
      "padding": "24px",
      "width": "50%",
    }
  }
>
  <div
    style={
      Object {
        "border": "1px solid blue",
      }
    }
  >
    <div
      data-css-63oe3q=""
    >
      <div
        data-css-4l6uky=""
      >
        <div
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          form stuff
        </div>
      </div>
      <div
        data-css-4l6uky=""
      >
        <div
          data-css-5osg3l=""
        >
          <div
            data-css-7d5932=""
          >
            <button
              data-css-a3dmt8=""
              disabled={false}
              style={Object {}}
            >
              <span
                data-css-15b13by=""
              >
                Save
              </span>
            </button>
          </div>
          <div
            data-css-7d5932=""
          >
            <button
              data-css-bu16i2=""
              disabled={false}
              style={Object {}}
            >
              <span
                data-css-15b13by=""
              >
                Cancel
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Form.ButtonRow single form element with single button 1`] = `
<div
  style={
    Object {
      "padding": "24px",
      "width": "50%",
    }
  }
>
  <div
    style={
      Object {
        "border": "1px solid blue",
      }
    }
  >
    <div
      data-css-63oe3q=""
    >
      <div
        data-css-4l6uky=""
      >
        <div
          data-css-1cqgl9p=""
        >
          <div
            data-css-7d5932=""
          >
            <button
              data-css-a3dmt8=""
              disabled={false}
              style={Object {}}
            >
              <span
                data-css-15b13by=""
              >
                Only One
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Sample Form null children 1`] = `
<div
  style={
    Object {
      "padding": "24px",
      "width": "50%",
    }
  }
>
  <div
    style={
      Object {
        "border": "1px solid blue",
      }
    }
  >
    <div
      data-css-63oe3q=""
    >
      <div
        data-css-4l6uky=""
      >
        <h2
          data-css-1cti5ps=""
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          Sample form
        </h2>
      </div>
      <div
        data-css-4l6uky=""
      >
        <label
          data-css-w0yocm=""
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            data-css-1jmxzqo=""
          >
            Name
          </div>
          <div
            data-css-1r967oi=""
          >
            <div
              data-css-ctre2o=""
            >
              <div
                data-css-1okk1dp=""
              >
                <input
                  data-css-1iyk6mt=""
                  disabled={false}
                  placeholder="What's your name?"
                  style={
                    Object {
                      "maxWidth": "none",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        data-css-4l6uky=""
      >
        <label
          data-css-w0yocm=""
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            data-css-1jmxzqo=""
          >
            Alias
          </div>
          <div
            data-css-1r967oi=""
          >
            <div
              data-css-ctre2o=""
            >
              <div
                data-css-1okk1dp=""
              >
                <input
                  data-css-1iyk6mt=""
                  disabled={false}
                  placeholder="Do you have a nick name?"
                  style={
                    Object {
                      "maxWidth": "none",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
          <div
            data-css-6ga4kh=""
          >
            *Optional
          </div>
        </label>
      </div>
      <div
        data-css-4l6uky=""
      >
        <div
          data-css-141usbw=""
        />
      </div>
      <div
        data-css-4l6uky=""
      >
        <label
          data-css-na8jqt=""
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            data-css-k6qvfq=""
          >
            Comment
          </div>
          <div
            data-css-1ios7mb=""
          >
            <div
              data-css-ctre2o=""
            >
              <textarea
                data-css-1paz7u7=""
                disabled={false}
                placeholder="Anything else to report?"
                style={
                  Object {
                    "height": 112,
                  }
                }
              />
            </div>
          </div>
        </label>
      </div>
      <div
        data-css-4l6uky=""
      >
        <div
          data-css-1cqgl9p=""
        >
          <div
            data-css-7d5932=""
          >
            <button
              data-css-a3dmt8=""
              disabled={false}
              style={Object {}}
            >
              <span
                data-css-15b13by=""
              >
                Save
              </span>
            </button>
          </div>
          <div
            data-css-7d5932=""
          >
            <button
              data-css-bu16i2=""
              disabled={false}
              style={Object {}}
            >
              <span
                data-css-15b13by=""
              >
                Cancel
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Sample Form sample 1`] = `
<div
  style={
    Object {
      "padding": "24px",
      "width": "50%",
    }
  }
>
  <div
    style={
      Object {
        "border": "1px solid blue",
      }
    }
  >
    <div
      data-css-63oe3q=""
    >
      <div
        data-css-4l6uky=""
      >
        <h2
          data-css-1cti5ps=""
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          Sample form
        </h2>
      </div>
      <div
        data-css-4l6uky=""
      >
        <label
          data-css-w0yocm=""
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            data-css-1jmxzqo=""
          >
            Name
          </div>
          <div
            data-css-1r967oi=""
          >
            <div
              data-css-ctre2o=""
            >
              <div
                data-css-1okk1dp=""
              >
                <input
                  data-css-1iyk6mt=""
                  disabled={false}
                  placeholder="What's your name?"
                  style={
                    Object {
                      "maxWidth": "none",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        data-css-4l6uky=""
      >
        <label
          data-css-w0yocm=""
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            data-css-1jmxzqo=""
          >
            Alias
          </div>
          <div
            data-css-1r967oi=""
          >
            <div
              data-css-ctre2o=""
            >
              <div
                data-css-1okk1dp=""
              >
                <input
                  data-css-1iyk6mt=""
                  disabled={false}
                  placeholder="Do you have a nick name?"
                  style={
                    Object {
                      "maxWidth": "none",
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
          </div>
          <div
            data-css-6ga4kh=""
          >
            *Optional
          </div>
        </label>
      </div>
      <div
        data-css-4l6uky=""
      >
        <label
          data-css-w0yocm=""
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            data-css-1jmxzqo=""
          >
            Email address
          </div>
          <div
            data-css-1r967oi=""
          >
            <div
              data-css-in6gqi=""
            >
              <div
                data-css-1okk1dp=""
              >
                <input
                  data-css-1iyk6mt=""
                  disabled={false}
                  style={
                    Object {
                      "maxWidth": "none",
                      "width": "100%",
                    }
                  }
                  value="steve@example.com"
                />
              </div>
            </div>
            <div
              data-css-1ha66tv=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="warning icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    clipRule="evenodd"
                    d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                    fillRule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            data-css-6ga4kh=""
          >
            Not a valid email address
          </div>
        </label>
      </div>
      <div
        data-css-4l6uky=""
      >
        <div
          data-css-1hniuff=""
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <label
            htmlFor="dropdown-input-unique-id"
          >
            <span>
              Occupation
            </span>
          </label>
          <div
            data-css-6wu9td=""
          >
            <input
              aria-activedescendant="dropdown-menu-unique-id-Engineer"
              aria-autocomplete="list"
              aria-controls="dropdown-menu-unique-id"
              aria-expanded={false}
              defaultValue=""
              disabled={false}
              id="dropdown-input-unique-id"
              onKeyDown={[Function]}
              role="combobox"
              tabIndex={-1}
            />
          </div>
          <div
            data-css-8befsb=""
          >
            <div
              data-css-3ah8pf=""
              data-css-ctre2o=""
            >
              <div
                data-css-ne3jjf=""
              >
                <button
                  data-css-185vr3w=""
                  disabled={false}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <span
                    data-css-1m4meif=""
                  >
                    <span
                      aria-hidden={true}
                      data-css-mlkf0z=""
                    >
                      Select your occupation...
                    </span>
                    <span
                      data-css-13czx1q=""
                    >
                      Select your occupation...
                    </span>
                  </span>
                  <div
                    data-css-19x2evt=""
                  >
                    <div
                      data-css-7dab2f=""
                    >
                      <svg
                        aria-label="caret down icon"
                        role="img"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-4l6uky=""
      >
        <div
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            data-css-1lu7sfl=""
          >
            <a
              data-css-1r5esr3=""
              href="http://google.com"
            >
              <span
                data-css-1997kh1=""
              >
                Foo
              </span>
            </a>
          </div>
          <span
            style={
              Object {
                "marginRight": "8px",
              }
            }
          />
          <div
            data-css-1lu7sfl=""
          >
            <a
              data-css-1r5esr3=""
              href="http://google.com"
            >
              <span
                data-css-1997kh1=""
              >
                Bar
              </span>
            </a>
          </div>
          <span
            style={
              Object {
                "marginRight": "8px",
              }
            }
          />
          <div
            data-css-1lu7sfl=""
          >
            <a
              data-css-1r5esr3=""
              href="http://google.com"
            >
              <span
                data-css-1997kh1=""
              >
                Baz
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        data-css-4l6uky=""
      >
        <div
          data-css-w0yocm=""
          onKeyDown={[Function]}
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            data-css-1jmxzqo=""
          >
            Choose a Date
          </div>
          <div
            data-css-ctre2o=""
          >
            <div
              data-css-1gfowhv=""
            >
              <input
                aria-label="month"
                data-css-1549q07=""
                name="mm"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="mm"
                style={
                  Object {
                    "width": "32px",
                  }
                }
                value=""
              />
              <span
                data-css-14iu1jp=""
              >
                /
              </span>
              <input
                aria-label="day"
                data-css-1549q07=""
                name="dd"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="dd"
                style={
                  Object {
                    "width": "24px",
                  }
                }
                value=""
              />
              <span
                data-css-14iu1jp=""
              >
                /
              </span>
              <input
                aria-label="year"
                data-css-1549q07=""
                name="yyyy"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="yyyy"
                style={
                  Object {
                    "width": "48px",
                  }
                }
                value=""
              />
              <input
                data-css-gyrv08=""
                readOnly={true}
                tabIndex={-1}
                value=""
              />
              <button
                data-css-14ley1g=""
                onClick={[Function]}
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="calendar icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.5 10a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zM20 3c.552 0 1 .444 1 .996v16.007A.997.997 0 0120 21H4a1 1 0 01-1-1V4a1 1 0 011-1h2V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h8V1.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5V3h2zm-1 16V8H5v11h14zM8.5 14a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1zm4 0a.5.5 0 01.5.5v1a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1z"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-4l6uky=""
      >
        <label
          data-css-kn3wr0=""
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <div
            data-css-1ij5lym=""
          >
            <input
              checked={true}
              data-css-6wu9td=""
              readOnly={true}
              style={
                Object {
                  "maxWidth": "none",
                  "width": "100%",
                }
              }
              type="checkbox"
              value="someVal"
            />
            <div
              data-css-1cfeqew=""
            >
              <svg
                aria-label="Checkmark"
                data-css-1m8h1an=""
                role="img"
                version="1.1"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polygon
                  points="6.89667458 13 2.62114014 8.72446556 4.12826603 7.21733967 6.89667458 9.97505938 12.871734 4 14.3788599 5.51781473"
                />
              </svg>
            </div>
          </div>
          <div
            data-css-55isdw=""
          >
            Checkbox selected
          </div>
        </label>
      </div>
      <div
        data-css-4l6uky=""
      >
        <div
          data-css-141usbw=""
        />
      </div>
      <div
        data-css-4l6uky=""
      >
        <div
          data-css-1a26704=""
          role="radiogroup"
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            data-css-xp79s5=""
          >
            <label
              data-css-kn3wr0=""
            >
              <div
                data-css-1lxv0yd=""
              >
                <div
                  data-css-1lu7sfl=""
                  data-css-iwspcj=""
                >
                  <div
                    aria-checked={false}
                    data-css-1wbxh41=""
                    role="radio"
                    tabIndex={-1}
                  />
                </div>
              </div>
              <input
                data-css-fplhjw=""
                name="sample"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                readOnly={true}
                type="radio"
                value="full"
              />
              <div
                data-css-18udfrp=""
              >
                Full-time employement
              </div>
            </label>
            <label
              data-css-kn3wr0=""
            >
              <div
                data-css-1lxv0yd=""
              >
                <div
                  data-css-1lu7sfl=""
                  data-css-iwspcj=""
                >
                  <div
                    aria-checked={false}
                    data-css-1wbxh41=""
                    role="radio"
                    tabIndex={-1}
                  />
                </div>
              </div>
              <input
                data-css-fplhjw=""
                name="sample"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                readOnly={true}
                type="radio"
                value="part"
              />
              <div
                data-css-18udfrp=""
              >
                Part-time employement
              </div>
            </label>
          </div>
        </div>
      </div>
      <div
        data-css-4l6uky=""
      >
        <div
          data-css-141usbw=""
        />
      </div>
      <div
        data-css-4l6uky=""
      >
        <label
          aria-checked={false}
          data-css-nq9iqf=""
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          role="checkbox"
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            data-css-1lu7sfl=""
          >
            <div
              data-css-19bj9q0=""
            >
              <div
                data-css-1o90whm=""
              />
            </div>
          </div>
          <input
            checked={false}
            data-css-6wu9td=""
            readOnly={true}
            tabIndex={-1}
            type="checkbox"
          />
          <span
            data-css-k7ezbc=""
          >
            toggle
          </span>
        </label>
      </div>
      <div
        data-css-4l6uky=""
      >
        <div
          data-css-141usbw=""
        />
      </div>
      <div
        data-css-4l6uky=""
      >
        <label
          data-css-na8jqt=""
          style={
            Object {
              "maxWidth": "none",
              "width": "100%",
            }
          }
        >
          <div
            data-css-k6qvfq=""
          >
            Comment
          </div>
          <div
            data-css-1ios7mb=""
          >
            <div
              data-css-ctre2o=""
            >
              <textarea
                data-css-1paz7u7=""
                disabled={false}
                placeholder="Anything else to report?"
                style={
                  Object {
                    "height": 112,
                  }
                }
              />
            </div>
          </div>
        </label>
      </div>
      <div
        data-css-4l6uky=""
      >
        <div
          data-css-1cqgl9p=""
        >
          <div
            data-css-7d5932=""
          >
            <button
              data-css-a3dmt8=""
              disabled={false}
              style={Object {}}
            >
              <span
                data-css-15b13by=""
              >
                Save
              </span>
            </button>
          </div>
          <div
            data-css-7d5932=""
          >
            <button
              data-css-bu16i2=""
              disabled={false}
              style={Object {}}
            >
              <span
                data-css-15b13by=""
              >
                Cancel
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
